--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "facebook-zucks",
   "version": "1.0.0",
   "description": "",
-  "main": " ",
-  "dependencies": {
-    "gulp": "^4.0.2"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-es2015": "^7.0.0-beta.53",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^10.0.0",
     "browserify": "^17.0.0",
+    "gulp": "^4.0.2",
     "gulp-sourcemaps": "^3.0.0",
     "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0"
+    "vinyl-source-stream": "^2.0.0",
+    "watchify": "^3.11.1"
   },
   "scripts": {},
   "repository": {
