--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
 	"content_scripts": [
 		{
 			"js": [
-				"content_script.js"
+				"bin/main.js"
 			],
 			"matches": [
 				"https://facebook.com/*"
