--- a/manifest.json
+++ b/manifest.json
@@ -9,14 +9,16 @@
 			"16": "icon/icon-16.png",
 			"32": "icon/icon-32.png",
 			"48": "icon/icon-48.png",
-			"128": "icon/icon-128.png"
+			"128": "icon/icon-128.png",
+			"512": "icon/icon-512.png"
 		}
 	},
 	"icons": {
 		"16": "icon/icon-16.png",
 		"32": "icon/icon-32.png",
 		"48": "icon/icon-48.png",
-		"128": "icon/icon-128.png"
+		"128": "icon/icon-128.png",
+		"512": "icon/icon-512.png"
 	},
 	"permissions": [
 		"activeTab",
